# Transformer-Hierarchical-Layers

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/: README.md  THL_CONTEXT.md
docs/lang/: README_AR.md  README_ES.md  README_FR.md  README_zh-hans.md
examples/: README.md
scripts/: README.md  run_tests.sh
tests/: README.md  conftest.py
tests/benchmarks/: README.md  benchmark_memory.py  benchmark_routing.py
tests/graphs/: README.md  graph_generator.py
tests/inference/: README.md  test_layered.py  test_state.py  test_streaming.py
tests/integration/: README.md  test_forward_pass.py  test_model_heads.py
tests/memory/: README.md  test_bank.py  test_router.py  test_writer.py
tests/tiers/: README.md  test_cell.py
tests/training/: README.md  test_diagnostics.py  test_losses.py  test_straight_through.py
tests/utils/: README.md  test_numerical.py
thl/: README.md
thl/inference/: README.md  layered.py  state.py  streaming.py
thl/memory/: README.md  bank.py  metadata.py  router.py  writer.py
thl/tiers/: README.md  cell.py  clock.py  stack.py
thl/training/: README.md  diagnostics.py  losses.py  straight_through.py
thl/utils/: README.md  embeddings.py  numerical.py  profiling.py
transformer_hierarchical_layers.egg-info/: PKG-INFO  SOURCES.txt
